[package]
name = "panic"
version = "0.1.0"
edition = "2021"

[dependencies]

[target.'cfg(target_os = "android")'.dependencies]
ndk-glue = "0.7.0"

[lib]
crate-type = [ "cdylib" ]

[package.metadata.android]
package = "co.nichi.panic"
apk_name = "panic"
build_targets = [ "aarch64-linux-android" ]
strip = "strip"
assets = "assets"

[package.metadata.android.application]
label = "Panic"
theme = "@android:style/Theme.Translucent.NoTitleBar"

[package.metadata.android.sdk]
target_sdk_version = 32
